// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: indexed > empty list: [] 1`] = `
{
  "elements": [],
  "type": "list",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: indexed > list with tail: [1, 2 | r] 1`] = `
{
  "elements": [
    {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
    {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 2,
      },
    },
  ],
  "rest": {
    "type": "name",
    "value": "r",
  },
  "type": "list",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: indexed > list: [1, 2] 1`] = `
{
  "elements": [
    {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
    {
      "type": "lit",
      "value": {
        "type": "Num",
        "value": 2,
      },
    },
  ],
  "rest": null,
  "type": "list",
  Symbol(snapshot:stripped): true,
}
`;
